consistently move to Writers for output to avoid buggy xml writing behavior; this change results in correctly indented xml output again